syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message ContextDomainTableDetail {
  Entity Entity = 1;
  string id_context_domain = 2;
  string context_name = 3;
  string id_pk = 4;
}

message ContextDomainTableDetailListRequest {
  ContextDomainTableDetail payload = 1;
  Metadata metadata = 2;
}

message ContextDomainTableDetailResponse {
  ContextDomainTableDetail response = 1;
}

message ContextDomainTableDetailListResponse {
  repeated ContextDomainTableDetail response = 1;
}

service ContextDomainTableDetailService {
  rpc Create(ContextDomainTableDetail) returns (ContextDomainTableDetailResponse);
  rpc Update(ContextDomainTableDetail) returns (ContextDomainTableDetailResponse);
  rpc FindAll(ContextDomainTableDetailListRequest) returns (ContextDomainTableDetailListResponse);
}
